--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3438,8 +3438,10 @@ margin-right: 20px;
 
 #bot1-wrapper{ width: 75%;
     position: relative;
+	float: left;
     display: inline-block;}
 #bot2-wrapper{    width: 24%;
+	    float: left;
     display: inline-block;
     vertical-align: top;}
 .bot .widget,.bot1 .widget,.bot2 .widget{margin:0;padding:0 0 8px}
@@ -3463,8 +3465,7 @@ html ul.tab-view li.active,html ul.tab-view li.active a,html ul.tab-view li.acti
 .sompret {overflow: hidden;
     position: relative;
     width: 100%;
-    height: 400px;
-    padding: 5px 0px 5px 5px;}
+    height: 400px;}
 .image_reel { position: absolute; top: 0; left: 0; }
 .image_reel img {overflow: hidden;float: left;width:795px; height:auto;}
 .paging {background:#1a1a1a;padding: 4px 0 2px; text-align:center;z-index: 100; }
