--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3438,7 +3438,7 @@ margin-right: 20px;
 
 #bot1-wrapper{ width: 75%;
 	position: relative;
-	height: 440px;
+	height: 400px;
     	background: #1a1a1a;
 	float: left;
     	display: inline-block;}
@@ -3472,7 +3472,7 @@ html ul.tab-view li.active,html ul.tab-view li.active a,html ul.tab-view li.acti
     height: 400px;}
 .image_reel { position: absolute; top: 0; left: 0; }
 .image_reel img {overflow: hidden;float: left;width:795px; height:auto;}
-.paging {background:#1a1a1a;padding: 4px 0 2px; text-align:center;z-index: 100; }
+.paging {background:#1a1a1a;padding: 4px 0 2px; text-align:center;z-index: 100;position: absolute;    bottom: 0; }
 .paging a { text-indent:-9999px; background:url(http://3.bp.blogspot.com/-Ble2QJgbwJc/UTdQ9go_mrI/AAAAAAAACdU/xNOmGZwWYGM/s1600/slider_item.png) no-repeat center; width:12px; height:12px; display:inline-block;margin:3px; border:none; outline:none; }
 .paging a.active { background:url(http://4.bp.blogspot.com/-QjgU7SewYSk/UTdQ9ugtYpI/AAAAAAAACdQ/Lfa0uSi9ocY/s1600/slider_item_active.png) no-repeat center; border:none; outline:none;}
 .paging a:hover {font-weight: bold; border:none; outline:none;}
