--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3436,8 +3436,7 @@ float: left;
 margin-right: 20px;
 }
 
-#bot1-wrapper{ width: 66%;
-	position: relative;
+#bot1-wrapper{ width: 66%;	position: relative;
 	height: 400px;
     	background: #1a1a1a;
 	float: left;
