--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3475,7 +3475,7 @@ html ul.tab-view li.active,html ul.tab-view li.active a,html ul.tab-view li.acti
 .paging a { text-indent:-9999px; background:url(http://3.bp.blogspot.com/-Ble2QJgbwJc/UTdQ9go_mrI/AAAAAAAACdU/xNOmGZwWYGM/s1600/slider_item.png) no-repeat center; width:12px; height:12px; display:inline-block;margin:3px; border:none; outline:none; }
 .paging a.active { background:url(http://4.bp.blogspot.com/-QjgU7SewYSk/UTdQ9ugtYpI/AAAAAAAACdQ/Lfa0uSi9ocY/s1600/slider_item_active.png) no-repeat center; border:none; outline:none;}
 .paging a:hover {font-weight: bold; border:none; outline:none;}
-.crott { display: none; position:absolute;bottom: 0; left: 25px; z-index: 101; background:rgba(0,0,0,0.5);padding:5px 10px;  }
+.crott { display: none; position:absolute;bottom: 25px; left: 0; z-index: 101; background:rgba(0,0,0,0.5);padding:5px 10px;  }
 .crott a{color: #EBC73D;font: 20px Oswald }
 .crott p{color: #fff;font: 12px Arial;}
 
